syntax = "proto3";

package publish.service.v1;

option go_package = "api/publish/service/v1;v1";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service PublishService {
	// 获取用户投稿视频列表(客户端)
	rpc GetPublishList(PublishListRequest) returns (PublishListReply) {
		option (google.api.http) = {
			get: "/douyin/publish/list"
		};
	}
	// 用户投稿或删除视频(客户端)
	rpc PublishAction(PublishActionRequest) returns (PublishActionReply) {
		option (google.api.http) = {
			post: "/douyin/publish/action"
			body: "*"
		};
	}

	// 获取根据最新投稿时间并根据获取数量进行返回(feed)
	rpc GetVideoList(VideoListRequest) returns (VideoListReply) {}
	// 根据视频id列表获取视频列表(favorite)
	rpc GetVideoListByVideoIds(VideoListByVideoIdsRequest) returns (VideoListReply) {}

	// 更新视频点赞总数(relation)
	rpc UpdateFavorite(UpdateFavoriteCountRequest) returns (google.protobuf.Empty) {}
	// 更新视频评论总数(comment)
	rpc UpdateComment(UpdateCommentCountRequest) returns (google.protobuf.Empty) {}
}

message VideoListRequest {
	string latest_time = 1; // 最新视频时间戳
	uint32 user_id = 2; // 用户id
	uint32 number = 3; // 视频数量
}

message VideoListReply {
	int64 next_time = 1; // 下次请求的时间戳
	repeated Video video_list = 2; // 视频列表
}

message VideoListByVideoIdsRequest {
	uint32 user_id = 2; // 登陆用户id
	repeated uint32 video_ids = 1; // 视频id列表
}

message UpdateFavoriteCountRequest {
	uint32 video_id = 1; // 视频id
	int32 favorite_change = 2; // 关注数变化值
}

message UpdateCommentCountRequest {
	uint32 video_id = 1; // 视频id
	int32 comment_change = 2; // 评论数变化值
}

message PublishActionRequest {
	string token = 1; // 用户鉴权token
	bytes data = 2; // 视频数据
	string title = 3; // 视频标题
}

message PublishActionReply {
	int32 status_code = 1 [json_name = "status_code"]; // 状态码，0-成功，其他值-失败
	string status_msg = 2 [json_name = "status_msg"]; // 返回状态描述
}

message PublishListRequest {
	uint32 user_id = 1; // 用户id
	string token = 2; // 用户鉴权token
}

message PublishListReply {
	int32 status_code = 1 [json_name = "status_code"]; // 状态码，0-成功，其他值-失败
	string status_msg = 2 [json_name = "status_msg"]; // 返回状态描述
	repeated Video video_list = 3 [json_name = "video_list"];// 用户发布的视频列表
}

message Video {
	uint32 id = 1 [json_name = "id"];// 视频唯一标识
	User author = 2 [json_name = "author"]; // 视频作者信息
	string play_url = 3 [json_name = "play_url"]; // 视频播放地址
	string cover_url = 4 [json_name = "cover_url"]; // 视频封面地址
	uint32 favorite_count = 5 [json_name = "favorite_count"]; // 视频的点赞总数
	uint32 comment_count = 6 [json_name = "comment_count"]; // 视频的评论总数
	bool is_favorite = 7 [json_name = "is_favorite"]; // true-已点赞，false-未点赞
	string title = 8 [json_name = "title"];// 视频标题
}

message User {
	uint32 id = 1 [json_name = "id"]; // 用户id
	string name = 2 [json_name = "name"];// 用户名称
	uint32 follow_count = 3 [json_name = "follow_count"]; // 关注总数
	uint32 follower_count = 4 [json_name = "follower_count"]; // 粉丝总数
	bool is_follow = 5 [json_name = "is_follow"]; // true-已关注，false-未关注
	string avatar = 6 [json_name = "avatar"]; //用户头像
	string background_image = 7 [json_name = "background_image"];//用户个人页顶部大图
	string signature = 8 [json_name = "signature"]; //个人简介
	uint32 total_favorited = 9 [json_name = "total_favorited"]; //获赞数量
	uint32 work_count = 10 [json_name = "work_count"]; //作品数量
	uint32 favorite_count = 11 [json_name = "favorite_count"];//点赞数量
}